--- a/.github/ISSUE_TEMPLATE/commit.yml
+++ b/.github/ISSUE_TEMPLATE/commit.yml
@@ -1,41 +1,35 @@
-name: 番剧提交
-description: 提交番剧资源点这里
-labels: ["番剧提交"]
+name: 资源提交
+description: 提交资源请点这里
+labels: ["资源提交"]
 body:
   - type: markdown
     attributes:
       value: |
-        请在标题写“番剧名称”！
+        请在标题写“资源名称”！
   - type: input
     id: name
     attributes:
-      label: 番剧名称
-      description: 请填写番剧名称
-      placeholder: 番剧名称
+      label: 资源名称
+      description: 请填写资源名称
+      placeholder: 资源名称
     validations:
       required: true
   - type: textarea
-    id: animeinformation
+    id: information
     attributes:
       label: 基本信息
       description: 直接复制粘贴的也可以哦
       placeholder: | 
         ### 简介
         示例文本
-        ### 开播时间
-        示例文本
-        ### 角色配音
-        示例文本
-        ### STAFF
-        示例文本
     validations:
       required: true
   - type: textarea
-    id: animelib
+    id: github-lib
     attributes:
-      label: Github 库地址
+      label: Github 仓库地址
       description: |
-        请填写你开放的 Github 公有库地址
+        请填写你开放的 Github 仓库地址
       placeholder: https://github.com/AnimeCDN/AnimeCDNExample
     validations:
       required: true
