--- a/.github/ISSUE_TEMPLATE/report.yml
+++ b/.github/ISSUE_TEMPLATE/report.yml
@@ -5,7 +5,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        请在标题写举报的资源名称！
+        请在标题写举报的资源名称
   - type: input
     id: name
     attributes:
