--- a/index/video/BadApple!!.json
+++ b/index/video/BadApple!!.json
@@ -7,6 +7,7 @@
   "clarity": ["480P"],
   "source-website": "哔哩哔哩",
   "source-url": "https://www.bilibili.com/video/BV1xx411c79H",
+  "danmaku": "BV1xx411c79H",
   "parts": {
     "480P": [
       {
